--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "decimal.js": "^10.6.0"
+    "decimal.js": "^10.6.0",
+    "redis": "^5.8.2"
   },
   "devDependencies": {
     "jest": "^30.1.2"
