--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "decimal.js": "^10.6.0",
-    "redis": "^5.8.2"
+    "redis": "^5.8.2",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "jest": "^30.1.2"
