--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "redis": "^5.8.2",
-    "ws": "^8.18.3",
+    "socket.io": "^4.8.1",
     "zod": "^4.1.5"
   },
   "devDependencies": {
